tests/suite/call_indirect.bin.wast
(module binary
  "\00\61\73\6d\01\00\00\00\01\fb\80\80\80\00\18\60"
  "\00\00\60\00\01\7f\60\00\01\7e\60\00\01\7d\60\00"
  "\01\7c\60\01\7f\01\7f\60\01\7e\01\7e\60\01\7d\01"
  "\7d\60\01\7c\01\7c\60\02\7d\7f\01\7f\60\02\7f\7e"
  "\01\7e\60\02\7c\7d\01\7d\60\02\7e\7c\01\7c\60\01"
  "\7f\01\7f\60\01\7e\01\7e\60\01\7d\01\7d\60\01\7c"
  "\01\7c\60\04\7e\7c\7f\7e\01\7f\60\01\7e\01\7f\60"
  "\04\7e\7c\7f\7e\00\60\01\7e\00\60\01\7f\01\7e\60"
  "\01\7f\01\7d\60\01\7f\01\7c\03\ca\80\80\80\00\49"
  "\01\02\03\04\05\06\07\08\0a\0c\09\0b\0d\0e\0f\10"
  "\00\01\02\03\04\02\01\02\03\04\01\02\03\04\0a\15"
  "\05\16\17\06\06\05\07\08\05\07\08\05\05\00\00\00"
  "\01\01\01\01\02\01\03\01\00\00\01\01\00\03\04\04"
  "\04\01\03\01\01\01\01\01\02\04\85\80\80\80\00\01"
  "\70\01\1d\1d\05\83\80\80\80\00\01\00\01\06\8d\80"
  "\80\80\00\01\7c\01\44\00\00\00\00\00\00\24\40\0b"
  "\07\fc\86\80\80\00\37\08\74\79\70\65\2d\69\33\32"
  "\00\11\08\74\79\70\65\2d\69\36\34\00\12\08\74\79"
  "\70\65\2d\66\33\32\00\13\08\74\79\70\65\2d\66\36"
  "\34\00\14\0a\74\79\70\65\2d\69\6e\64\65\78\00\15"
  "\0e\74\79\70\65\2d\66\69\72\73\74\2d\69\33\32\00"
  "\16\0e\74\79\70\65\2d\66\69\72\73\74\2d\69\36\34"
  "\00\17\0e\74\79\70\65\2d\66\69\72\73\74\2d\66\33"
  "\32\00\18\0e\74\79\70\65\2d\66\69\72\73\74\2d\66"
  "\36\34\00\19\0f\74\79\70\65\2d\73\65\63\6f\6e\64"
  "\2d\69\33\32\00\1a\0f\74\79\70\65\2d\73\65\63\6f"
  "\6e\64\2d\69\36\34\00\1b\0f\74\79\70\65\2d\73\65"
  "\63\6f\6e\64\2d\66\33\32\00\1c\0f\74\79\70\65\2d"
  "\73\65\63\6f\6e\64\2d\66\36\34\00\1d\08\64\69\73"
  "\70\61\74\63\68\00\1e\17\64\69\73\70\61\74\63\68"
  "\2d\73\74\72\75\63\74\75\72\61\6c\2d\69\36\34\00"
  "\1f\17\64\69\73\70\61\74\63\68\2d\73\74\72\75\63"
  "\74\75\72\61\6c\2d\69\33\32\00\20\17\64\69\73\70"
  "\61\74\63\68\2d\73\74\72\75\63\74\75\72\61\6c\2d"
  "\66\33\32\00\21\17\64\69\73\70\61\74\63\68\2d\73"
  "\74\72\75\63\74\75\72\61\6c\2d\66\36\34\00\22\07"
  "\66\61\63\2d\69\36\34\00\23\07\66\69\62\2d\69\36"
  "\34\00\24\07\66\61\63\2d\69\33\32\00\25\07\66\61"
  "\63\2d\66\33\32\00\26\07\66\61\63\2d\66\36\34\00"
  "\27\07\66\69\62\2d\69\33\32\00\28\07\66\69\62\2d"
  "\66\33\32\00\29\07\66\69\62\2d\66\36\34\00\2a\04"
  "\65\76\65\6e\00\2b\03\6f\64\64\00\2c\07\72\75\6e"
  "\61\77\61\79\00\2d\0e\6d\75\74\75\61\6c\2d\72\75"
  "\6e\61\77\61\79\00\2e\0f\61\73\2d\73\65\6c\65\63"
  "\74\2d\66\69\72\73\74\00\30\0d\61\73\2d\73\65\6c"
  "\65\63\74\2d\6d\69\64\00\31\0e\61\73\2d\73\65\6c"
  "\65\63\74\2d\6c\61\73\74\00\32\0f\61\73\2d\69\66"
  "\2d\63\6f\6e\64\69\74\69\6f\6e\00\33\0e\61\73\2d"
  "\62\72\5f\69\66\2d\66\69\72\73\74\00\34\0d\61\73"
  "\2d\62\72\5f\69\66\2d\6c\61\73\74\00\35\11\61\73"
  "\2d\62\72\5f\74\61\62\6c\65\2d\66\69\72\73\74\00"
  "\36\10\61\73\2d\62\72\5f\74\61\62\6c\65\2d\6c\61"
  "\73\74\00\37\0e\61\73\2d\73\74\6f\72\65\2d\66\69"
  "\72\73\74\00\38\0d\61\73\2d\73\74\6f\72\65\2d\6c"
  "\61\73\74\00\39\14\61\73\2d\6d\65\6d\6f\72\79\2e"
  "\67\72\6f\77\2d\76\61\6c\75\65\00\3a\0f\61\73\2d"
  "\72\65\74\75\72\6e\2d\76\61\6c\75\65\00\3b\0f\61"
  "\73\2d\64\72\6f\70\2d\6f\70\65\72\61\6e\64\00\3c"
  "\0b\61\73\2d\62\72\2d\76\61\6c\75\65\00\3d\12\61"
  "\73\2d\6c\6f\63\61\6c\2e\73\65\74\2d\76\61\6c\75"
  "\65\00\3e\12\61\73\2d\6c\6f\63\61\6c\2e\74\65\65"
  "\2d\76\61\6c\75\65\00\3f\13\61\73\2d\67\6c\6f\62"
  "\61\6c\2e\73\65\74\2d\76\61\6c\75\65\00\40\0f\61"
  "\73\2d\6c\6f\61\64\2d\6f\70\65\72\61\6e\64\00\41"
  "\10\61\73\2d\75\6e\61\72\79\2d\6f\70\65\72\61\6e"
  "\64\00\42\0e\61\73\2d\62\69\6e\61\72\79\2d\6c\65"
  "\66\74\00\43\0f\61\73\2d\62\69\6e\61\72\79\2d\72"
  "\69\67\68\74\00\44\0f\61\73\2d\74\65\73\74\2d\6f"
  "\70\65\72\61\6e\64\00\45\0f\61\73\2d\63\6f\6d\70"
  "\61\72\65\2d\6c\65\66\74\00\46\10\61\73\2d\63\6f"
  "\6d\70\61\72\65\2d\72\69\67\68\74\00\47\12\61\73"
  "\2d\63\6f\6e\76\65\72\74\2d\6f\70\65\72\61\6e\64"
  "\00\48\09\a3\80\80\80\00\01\00\41\00\0b\1d\00\01"
  "\02\03\04\05\06\07\0a\08\0b\09\23\24\2b\2c\2d\2e"
  "\2f\0c\0d\0e\0f\25\26\27\28\29\2a\0a\ba\8b\80\80"
  "\00\49\85\80\80\80\00\00\41\b2\02\0b\85\80\80\80"
  "\00\00\42\e4\02\0b\87\80\80\80\00\00\43\00\20\73"
  "\45\0b\8b\80\80\80\00\00\44\00\00\00\00\00\c8\ae"
  "\40\0b\84\80\80\80\00\00\20\00\0b\84\80\80\80\00"
  "\00\20\00\0b\84\80\80\80\00\00\20\00\0b\84\80\80"
  "\80\00\00\20\00\0b\84\80\80\80\00\00\20\01\0b\84"
  "\80\80\80\00\00\20\01\0b\84\80\80\80\00\00\20\01"
  "\0b\84\80\80\80\00\00\20\01\0b\84\80\80\80\00\00"
  "\20\00\0b\84\80\80\80\00\00\20\00\0b\84\80\80\80"
  "\00\00\20\00\0b\84\80\80\80\00\00\20\00\0b\dd\80"
  "\80\80\00\00\41\00\11\00\00\42\00\41\00\11\14\00"
  "\42\00\44\00\00\00\00\00\00\00\00\41\00\42\00\41"
  "\00\11\13\00\41\00\11\00\00\41\00\11\01\00\45\1a"
  "\41\00\11\01\00\45\1a\42\00\41\00\11\12\00\45\1a"
  "\42\00\44\00\00\00\00\00\00\00\00\41\00\42\00\41"
  "\00\11\11\00\45\1a\42\00\41\00\11\06\00\50\1a\0b"
  "\87\80\80\80\00\00\41\00\11\01\00\0b\87\80\80\80"
  "\00\00\41\01\11\02\00\0b\87\80\80\80\00\00\41\02"
  "\11\03\00\0b\87\80\80\80\00\00\41\03\11\04\00\0b"
  "\8a\80\80\80\00\00\42\e4\00\41\05\11\06\00\0b\89"
  "\80\80\80\00\00\41\20\41\04\11\05\00\0b\8a\80\80"
  "\80\00\00\42\c0\00\41\05\11\06\00\0b\8c\80\80\80"
  "\00\00\43\c3\f5\a8\3f\41\06\11\07\00\0b\90\80\80"
  "\80\00\00\44\3d\0a\d7\a3\70\3d\fa\3f\41\07\11\08"
  "\00\0b\8e\80\80\80\00\00\43\66\66\00\42\41\20\41"
  "\08\11\09\00\0b\8c\80\80\80\00\00\41\20\42\c0\00"
  "\41\09\11\0a\00\0b\95\80\80\80\00\00\44\00\00\00"
  "\00\00\00\50\40\43\00\00\00\42\41\0a\11\0b\00\0b"
  "\93\80\80\80\00\00\42\c0\00\44\66\66\66\66\66\06"
  "\50\40\41\0b\11\0c\00\0b\89\80\80\80\00\00\20\01"
  "\20\00\11\06\00\0b\89\80\80\80\00\00\42\09\20\00"
  "\11\0e\00\0b\89\80\80\80\00\00\41\09\20\00\11\0d"
  "\00\0b\8c\80\80\80\00\00\43\00\00\10\41\20\00\11"
  "\0f\00\0b\90\80\80\80\00\00\44\00\00\00\00\00\00"
  "\22\40\20\00\11\10\00\0b\98\80\80\80\00\00\20\00"
  "\50\04\7e\42\01\05\20\00\20\00\42\01\7d\41\0c\11"
  "\06\00\7e\0b\0b\a2\80\80\80\00\00\20\00\42\01\58"
  "\04\7e\42\01\05\20\00\42\02\7d\41\0d\11\06\00\20"
  "\00\42\01\7d\41\0d\11\06\00\7c\0b\0b\98\80\80\80"
  "\00\00\20\00\45\04\7f\41\01\05\20\00\20\00\41\01"
  "\6b\41\17\11\05\00\6c\0b\0b\a3\80\80\80\00\00\20"
  "\00\43\00\00\00\00\5b\04\7d\43\00\00\80\3f\05\20"
  "\00\20\00\43\00\00\80\3f\93\41\18\11\07\00\94\0b"
  "\0b\af\80\80\80\00\00\20\00\44\00\00\00\00\00\00"
  "\00\00\61\04\7c\44\00\00\00\00\00\00\f0\3f\05\20"
  "\00\20\00\44\00\00\00\00\00\00\f0\3f\a1\41\19\11"
  "\08\00\a2\0b\0b\a2\80\80\80\00\00\20\00\41\01\4d"
  "\04\7f\41\01\05\20\00\41\02\6b\41\1a\11\05\00\20"
  "\00\41\01\6b\41\1a\11\05\00\6a\0b\0b\ae\80\80\80"
  "\00\00\20\00\43\00\00\80\3f\5f\04\7d\43\00\00\80"
  "\3f\05\20\00\43\00\00\00\40\93\41\1b\11\07\00\20"
  "\00\43\00\00\80\3f\93\41\1b\11\07\00\92\0b\0b\be"
  "\80\80\80\00\00\20\00\44\00\00\00\00\00\00\f0\3f"
  "\65\04\7c\44\00\00\00\00\00\00\f0\3f\05\20\00\44"
  "\00\00\00\00\00\00\00\40\a1\41\1c\11\08\00\20\00"
  "\44\00\00\00\00\00\00\f0\3f\a1\41\1c\11\08\00\a0"
  "\0b\0b\95\80\80\80\00\00\20\00\45\04\7f\41\2c\05"
  "\20\00\41\01\6b\41\0f\11\05\00\0b\0b\96\80\80\80"
  "\00\00\20\00\45\04\7f\41\e3\00\05\20\00\41\01\6b"
  "\41\0e\11\05\00\0b\0b\87\80\80\80\00\00\41\10\11"
  "\00\00\0b\87\80\80\80\00\00\41\12\11\00\00\0b\87"
  "\80\80\80\00\00\41\11\11\00\00\0b\8c\80\80\80\00"
  "\00\41\00\11\01\00\41\02\41\03\1b\0b\8c\80\80\80"
  "\00\00\41\02\41\00\11\01\00\41\03\1b\0b\8c\80\80"
  "\80\00\00\41\02\41\03\41\00\11\01\00\1b\0b\8f\80"
  "\80\80\00\00\41\00\11\01\00\04\7f\41\01\05\41\02"
  "\0b\0b\8e\80\80\80\00\00\02\7e\41\01\11\02\00\41"
  "\02\0d\00\0b\0b\8e\80\80\80\00\00\02\7f\41\02\41"
  "\00\11\01\00\0d\00\0b\0b\90\80\80\80\00\00\02\7d"
  "\41\02\11\03\00\41\02\0e\01\00\00\0b\0b\90\80\80"
  "\80\00\00\02\7f\41\02\41\00\11\01\00\0e\01\00\00"
  "\0b\0b\8c\80\80\80\00\00\41\00\11\01\00\41\01\36"
  "\02\00\0b\8c\80\80\80\00\00\41\0a\41\03\11\04\00"
  "\39\03\00\0b\89\80\80\80\00\00\41\00\11\01\00\40"
  "\00\0b\8a\80\80\80\00\00\41\01\41\04\11\05\00\0f"
  "\0b\8a\80\80\80\00\00\42\01\41\05\11\06\00\1a\0b"
  "\91\80\80\80\00\00\02\7d\43\00\00\80\3f\41\06\11"
  "\07\00\0c\00\0b\0b\96\80\80\80\00\01\01\7c\44\00"
  "\00\00\00\00\00\f0\3f\41\07\11\08\00\21\00\20\00"
  "\0b\94\80\80\80\00\01\01\7c\44\00\00\00\00\00\00"
  "\f0\3f\41\07\11\08\00\22\00\0b\94\80\80\80\00\00"
  "\44\00\00\00\00\00\00\f0\3f\41\07\11\08\00\24\00"
  "\23\00\0b\8a\80\80\80\00\00\41\00\11\01\00\28\02"
  "\00\0b\90\80\80\80\00\00\02\7d\43\00\00\00\00\41"
  "\06\11\07\00\91\0b\0b\8f\80\80\80\00\00\02\7f\41"
  "\01\41\04\11\05\00\41\0a\6a\0b\0b\8f\80\80\80\00"
  "\00\02\7f\41\0a\41\01\41\04\11\05\00\6b\0b\0b\8d"
  "\80\80\80\00\00\02\7f\41\01\41\04\11\05\00\45\0b"
  "\0b\8f\80\80\80\00\00\02\7f\41\01\41\04\11\05\00"
  "\41\0a\4d\0b\0b\8f\80\80\80\00\00\02\7f\41\0a\41"
  "\01\41\04\11\05\00\47\0b\0b\8d\80\80\80\00\00\02"
  "\7e\41\01\41\04\11\05\00\ac\0b\0b"
)
(assert_return (invoke "type-i32") (i32.const 306))
(assert_return (invoke "type-i64") (i64.const 356))
(assert_return (invoke "type-f32") (f32.const 3_890))
(assert_return (invoke "type-f64") (f64.const 3_940))
(assert_return (invoke "type-index") (i64.const 100))
(assert_return (invoke "type-first-i32") (i32.const 32))
(assert_return (invoke "type-first-i64") (i64.const 64))
(assert_return (invoke "type-first-f32") (f32.const 1.320_000_052_452_087_4))
(assert_return (invoke "type-first-f64") (f64.const 1.639_999_999_999_999_9))
(assert_return (invoke "type-second-i32") (i32.const 32))
(assert_return (invoke "type-second-i64") (i64.const 64))
(assert_return (invoke "type-second-f32") (f32.const 32))
(assert_return (invoke "type-second-f64") (f64.const 64.099_999_999_999_994))
(assert_return (invoke "dispatch" (i32.const 5) (i64.const 2)) (i64.const 2))
(assert_return (invoke "dispatch" (i32.const 5) (i64.const 5)) (i64.const 5))
(assert_return (invoke "dispatch" (i32.const 12) (i64.const 5)) (i64.const 120))
(assert_return (invoke "dispatch" (i32.const 13) (i64.const 5)) (i64.const 8))
(assert_return (invoke "dispatch" (i32.const 20) (i64.const 2)) (i64.const 2))
(assert_trap
  (invoke "dispatch" (i32.const 0) (i64.const 2))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch" (i32.const 15) (i64.const 2))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch" (i32.const 29) (i64.const 2))
  "undefined element"
)
(assert_trap
  (invoke "dispatch" (i32.const -1) (i64.const 2))
  "undefined element"
)
(assert_trap
  (invoke "dispatch" (i32.const 1_213_432_423) (i64.const 2))
  "undefined element"
)
(assert_return (invoke "dispatch-structural-i64" (i32.const 5)) (i64.const 9))
(assert_return
  (invoke "dispatch-structural-i64" (i32.const 12))
  (i64.const 362_880)
)
(assert_return (invoke "dispatch-structural-i64" (i32.const 13)) (i64.const 55))
(assert_return (invoke "dispatch-structural-i64" (i32.const 20)) (i64.const 9))
(assert_trap
  (invoke "dispatch-structural-i64" (i32.const 11))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch-structural-i64" (i32.const 22))
  "indirect call type mismatch"
)
(assert_return (invoke "dispatch-structural-i32" (i32.const 4)) (i32.const 9))
(assert_return
  (invoke "dispatch-structural-i32" (i32.const 23))
  (i32.const 362_880)
)
(assert_return (invoke "dispatch-structural-i32" (i32.const 26)) (i32.const 55))
(assert_return (invoke "dispatch-structural-i32" (i32.const 19)) (i32.const 9))
(assert_trap
  (invoke "dispatch-structural-i32" (i32.const 9))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch-structural-i32" (i32.const 21))
  "indirect call type mismatch"
)
(assert_return (invoke "dispatch-structural-f32" (i32.const 6)) (f32.const 9))
(assert_return
  (invoke "dispatch-structural-f32" (i32.const 24))
  (f32.const 362_880)
)
(assert_return (invoke "dispatch-structural-f32" (i32.const 27)) (f32.const 55))
(assert_return (invoke "dispatch-structural-f32" (i32.const 21)) (f32.const 9))
(assert_trap
  (invoke "dispatch-structural-f32" (i32.const 8))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch-structural-f32" (i32.const 19))
  "indirect call type mismatch"
)
(assert_return (invoke "dispatch-structural-f64" (i32.const 7)) (f64.const 9))
(assert_return
  (invoke "dispatch-structural-f64" (i32.const 25))
  (f64.const 362_880)
)
(assert_return (invoke "dispatch-structural-f64" (i32.const 28)) (f64.const 55))
(assert_return (invoke "dispatch-structural-f64" (i32.const 22)) (f64.const 9))
(assert_trap
  (invoke "dispatch-structural-f64" (i32.const 10))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch-structural-f64" (i32.const 18))
  "indirect call type mismatch"
)
(assert_return (invoke "fac-i64" (i64.const 0)) (i64.const 1))
(assert_return (invoke "fac-i64" (i64.const 1)) (i64.const 1))
(assert_return (invoke "fac-i64" (i64.const 5)) (i64.const 120))
(assert_return
  (invoke "fac-i64" (i64.const 25))
  (i64.const 7_034_535_277_573_963_776)
)
(assert_return (invoke "fac-i32" (i32.const 0)) (i32.const 1))
(assert_return (invoke "fac-i32" (i32.const 1)) (i32.const 1))
(assert_return (invoke "fac-i32" (i32.const 5)) (i32.const 120))
(assert_return (invoke "fac-i32" (i32.const 10)) (i32.const 3_628_800))
(assert_return (invoke "fac-f32" (f32.const 0)) (f32.const 1))
(assert_return (invoke "fac-f32" (f32.const 1)) (f32.const 1))
(assert_return (invoke "fac-f32" (f32.const 5)) (f32.const 120))
(assert_return (invoke "fac-f32" (f32.const 10)) (f32.const 3_628_800))
(assert_return (invoke "fac-f64" (f64.const 0)) (f64.const 1))
(assert_return (invoke "fac-f64" (f64.const 1)) (f64.const 1))
(assert_return (invoke "fac-f64" (f64.const 5)) (f64.const 120))
(assert_return (invoke "fac-f64" (f64.const 10)) (f64.const 3_628_800))
(assert_return (invoke "fib-i64" (i64.const 0)) (i64.const 1))
(assert_return (invoke "fib-i64" (i64.const 1)) (i64.const 1))
(assert_return (invoke "fib-i64" (i64.const 2)) (i64.const 2))
(assert_return (invoke "fib-i64" (i64.const 5)) (i64.const 8))
(assert_return (invoke "fib-i64" (i64.const 20)) (i64.const 10_946))
(assert_return (invoke "fib-i32" (i32.const 0)) (i32.const 1))
(assert_return (invoke "fib-i32" (i32.const 1)) (i32.const 1))
(assert_return (invoke "fib-i32" (i32.const 2)) (i32.const 2))
(assert_return (invoke "fib-i32" (i32.const 5)) (i32.const 8))
(assert_return (invoke "fib-i32" (i32.const 20)) (i32.const 10_946))
(assert_return (invoke "fib-f32" (f32.const 0)) (f32.const 1))
(assert_return (invoke "fib-f32" (f32.const 1)) (f32.const 1))
(assert_return (invoke "fib-f32" (f32.const 2)) (f32.const 2))
(assert_return (invoke "fib-f32" (f32.const 5)) (f32.const 8))
(assert_return (invoke "fib-f32" (f32.const 20)) (f32.const 10_946))
(assert_return (invoke "fib-f64" (f64.const 0)) (f64.const 1))
(assert_return (invoke "fib-f64" (f64.const 1)) (f64.const 1))
(assert_return (invoke "fib-f64" (f64.const 2)) (f64.const 2))
(assert_return (invoke "fib-f64" (f64.const 5)) (f64.const 8))
(assert_return (invoke "fib-f64" (f64.const 20)) (f64.const 10_946))
(assert_return (invoke "even" (i32.const 0)) (i32.const 44))
(assert_return (invoke "even" (i32.const 1)) (i32.const 99))
(assert_return (invoke "even" (i32.const 100)) (i32.const 44))
(assert_return (invoke "even" (i32.const 77)) (i32.const 99))
(assert_return (invoke "odd" (i32.const 0)) (i32.const 99))
(assert_return (invoke "odd" (i32.const 1)) (i32.const 44))
(assert_return (invoke "odd" (i32.const 200)) (i32.const 99))
(assert_return (invoke "odd" (i32.const 77)) (i32.const 44))
(assert_exhaustion (invoke "runaway") "call stack exhausted")
(assert_exhaustion (invoke "mutual-runaway") "call stack exhausted")
(assert_return (invoke "as-select-first") (i32.const 306))
(assert_return (invoke "as-select-mid") (i32.const 2))
(assert_return (invoke "as-select-last") (i32.const 2))
(assert_return (invoke "as-if-condition") (i32.const 1))
(assert_return (invoke "as-br_if-first") (i64.const 356))
(assert_return (invoke "as-br_if-last") (i32.const 2))
(assert_return (invoke "as-br_table-first") (f32.const 3_890))
(assert_return (invoke "as-br_table-last") (i32.const 2))
(assert_return (invoke "as-store-first"))
(assert_return (invoke "as-store-last"))
(assert_return (invoke "as-memory.grow-value") (i32.const 1))
(assert_return (invoke "as-return-value") (i32.const 1))
(assert_return (invoke "as-drop-operand"))
(assert_return (invoke "as-br-value") (f32.const 1))
(assert_return (invoke "as-local.set-value") (f64.const 1))
(assert_return (invoke "as-local.tee-value") (f64.const 1))
(assert_return (invoke "as-global.set-value") (f64.const 1))
(assert_return (invoke "as-load-operand") (i32.const 1))
(assert_return (invoke "as-unary-operand") (f32.const 0))
(assert_return (invoke "as-binary-left") (i32.const 11))
(assert_return (invoke "as-binary-right") (i32.const 9))
(assert_return (invoke "as-test-operand") (i32.const 0))
(assert_return (invoke "as-compare-left") (i32.const 1))
(assert_return (invoke "as-compare-right") (i32.const 1))
(assert_return (invoke "as-convert-operand") (i64.const 1))
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 funcref)(func (result i32)  (call_indirect (type $sig) (result i32) (param i32)    (i32.const 0) (i32.const 0)  ))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 funcref)(func (result i32)  (call_indirect (param i32) (type $sig) (result i32)    (i32.const 0) (i32.const 0)  ))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 funcref)(func (result i32)  (call_indirect (param i32) (result i32) (type $sig)    (i32.const 0) (i32.const 0)  ))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 funcref)(func (result i32)  (call_indirect (result i32) (type $sig) (param i32)    (i32.const 0) (i32.const 0)  ))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 funcref)(func (result i32)  (call_indirect (result i32) (param i32) (type $sig)    (i32.const 0) (i32.const 0)  ))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(table 0 funcref)(func (result i32)  (call_indirect (result i32) (param i32) (i32.const 0) (i32.const 0)))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(table 0 funcref)(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(type $sig (func))(table 0 funcref)(func (result i32)  (call_indirect (type $sig) (result i32) (i32.const 0)))"
  )
  "inline function type"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 funcref)(func (result i32)  (call_indirect (type $sig) (result i32) (i32.const 0)))"
  )
  "inline function type"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 funcref)(func  (call_indirect (type $sig) (param i32) (i32.const 0) (i32.const 0)))"
  )
  "inline function type"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32 i32) (result i32)))(table 0 funcref)(func (result i32)  (call_indirect (type $sig) (param i32) (result i32)    (i32.const 0) (i32.const 0)  ))"
  )
  "inline function type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8d\80\80\80\00"
    "\01\87\80\80\80\00\00\41\00\11\00\00\0b"
  )
  "unknown table"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\11\00\00\45\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7e\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8e\80\80\80\00\01\88"
    "\80\80\80\00\00\41\00\11\00\00\45\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8d\80\80\80\00\01\87"
    "\80\80\80\00\00\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7c\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\8d\80\80\80\00\01"
    "\87\80\80\80\00\00\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00"
    "\00\41\01\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\98\80\80\80\00\01\92\80\80\80\00"
    "\00\44\00\00\00\00\00\00\00\40\41\01\41\00\11\00"
    "\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8e\80\80\80\00\01\88"
    "\80\80\80\00\00\41\01\01\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8f\80\80\80\00\01\89"
    "\80\80\80\00\00\41\00\42\01\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\90\80\80\80\00\01"
    "\8a\80\80\80\00\00\01\41\01\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\90\80\80\80\00\01"
    "\8a\80\80\80\00\00\41\01\01\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7c\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\98\80\80\80\00\01"
    "\92\80\80\80\00\00\44\00\00\00\00\00\00\f0\3f\41"
    "\01\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7c\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\98\80\80\80\00\01"
    "\92\80\80\80\00\00\41\01\44\00\00\00\00\00\00\f0"
    "\3f\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\83\80\80\80\00\02\00\01\04"
    "\85\80\80\80\00\01\70\01\01\01\09\87\80\80\80\00"
    "\01\00\41\00\0b\01\00\0a\97\80\80\80\00\02\82\80"
    "\80\80\00\00\0b\8a\80\80\80\00\00\02\40\41\00\11"
    "\00\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\83\80\80\80\00\02\00\01"
    "\04\85\80\80\80\00\01\70\01\01\01\09\87\80\80\80"
    "\00\01\00\41\00\0b\01\00\0a\99\80\80\80\00\02\82"
    "\80\80\80\00\00\0b\8c\80\80\80\00\00\02\40\41\00"
    "\41\00\11\00\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\83\80\80\80\00\02\00\01\04"
    "\85\80\80\80\00\01\70\01\01\01\09\87\80\80\80\00"
    "\01\00\41\00\0b\01\00\0a\97\80\80\80\00\02\82\80"
    "\80\80\00\00\0b\8a\80\80\80\00\00\03\40\41\00\11"
    "\00\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\83\80\80\80\00\02\00\01"
    "\04\85\80\80\80\00\01\70\01\01\01\09\87\80\80\80"
    "\00\01\00\41\00\0b\01\00\0a\99\80\80\80\00\02\82"
    "\80\80\80\00\00\0b\8c\80\80\80\00\00\03\40\41\00"
    "\41\00\11\00\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\83\80\80\80\00\02\00\01\04"
    "\85\80\80\80\00\01\70\01\01\01\09\87\80\80\80\00"
    "\01\00\41\00\0b\01\00\0a\9b\80\80\80\00\02\82\80"
    "\80\80\00\00\0b\8e\80\80\80\00\00\41\00\41\00\04"
    "\40\41\00\11\00\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\83\80\80\80\00\02\00\01"
    "\04\85\80\80\80\00\01\70\01\01\01\09\87\80\80\80"
    "\00\01\00\41\00\0b\01\00\0a\9d\80\80\80\00\02\82"
    "\80\80\80\00\00\0b\90\80\80\80\00\00\41\00\41\00"
    "\04\40\41\00\41\00\11\00\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\8d\80\80\80\00\01\87\80\80\80\00"
    "\00\41\00\11\01\00\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\91\80\80\80\00\01\8b\80\80\80\00"
    "\00\41\00\11\94\98\db\e2\03\00\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\04\85\80\80\80\00\01\70"
    "\01\02\02\09\88\80\80\80\00\01\00\41\00\0b\02\00"
    "\00"
  )
  "unknown function"
)
